# CommManager4MATLAB

./: .gitignore  .gitmodules  CommManager.m  CommManager4MATLAB.code-workspace  README.md  testCommManager.m  typecastAll.m
examples/protobuf_examples/: CMakeLists.txt
examples/protobuf_examples/examples/: CMakeLists.txt  ReadingExample.cpp  WritingExample.cpp  protoGenerate.sh
examples/protobuf_examples/robots-api-proto/: robotsAPI.proto
examples/protobuf_examples/tests/: testProtodefs.py
src/: BlenderPyCommManager.m  CORTOpyCommManager.m  CommManager.m  CommManager4SLX.slx  EnumCommDataType.m  EnumCommMode.m  EnumRenderingFrame.m  TensorCommManager.m  testCommManagerUDP_TCP2CORTO.m
src/images_utils/: ApplyBayer_to_RGB.m  CreateBayerFilter.m  InterpretBayerRGBAToImg.m  UnpackBufferRGBAtoArrayRGB.m  UnpackImageFromCORTO.m
src/utils/: CheckExistsTmuxSession.m  CommManager.m  ComposeCommandForBpyInTmux.m  ConverHexDump2Array.m  GetMatchingProcessPID.m  TensorCommManager.m  typecastAllCells.m
tests/: LoadDataRCS1.m  loadTestData.m  testBlenderPyCommManager.m  testCORTOpyCommManager.m  testCommManagerUDP_TCP2CORTO.m  testUDP_TCPserver.m  tmux_probing.m
